--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "bootswatch": "^5.1.3",
     "deezer-public-api": "^1.0.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
